# expo-push-notifications

./: .env.development  .gitignore  GoogleService-Info.plist  README.md  app.json  eas.json  env.d.ts  google-services.json  package-lock.json  package.json
backend/: Cargo.toml  diesel.toml
backend/migrations/2024-11-05-162256_create_devices/: down.sql  up.sql
backend/src/: calc.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  notifications.rs  schema.rs
docs/: setup.md
src/: App.tsx  constants.ts  errors.ts  gateway.ts  styles.ts
src/screens/: Calculator.tsx  Home.tsx  Notifications.tsx  Quotes.tsx  Registration.tsx
src/store/: registrationSlice.ts  store.ts
