[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-server = "2.5.0"
actix-web = "4.9.0"
chrono = "0.4.38"
diesel = { version = "2.2.4", features = ["postgres", "uuid", "chrono", "serde_json", "r2d2"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
eyre = "0.6.12"
log = "0.4.22"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.68"
tokio = { version = "1.41.0", features = ["full"] }
