[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-server = "2.5.0"
actix-web = "4.9.0"
clap = { version = "4.5.20", features = ["derive", "env"] }
env_logger = "0.11.5"
expo_push_notification_client = "0.5.1"
eyre = "0.6.12"
lazy_static = "1.5.0"
log = "0.4.22"
rand = "0.8.5"
reqwest = "0.12.9"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.68"
tokio = { version = "1.41.0", features = ["full"] }
